test/testdata/e2e/template_validation/virtual-service-template-2.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualServiceTemplate
metadata:
  name: vst
spec:
  listener:
    name: https
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  tlsConfig:
    autoDiscovery: true
  additionalRoutes:
    - name: route-root
