test/testdata/e2e/template_validation/virtual-service.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: virtual-service
  annotations:
    envoy.kaasops.io/node-id: e2e
spec:
  template:
    name: vst
  listener:
    name: https-listener
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  tlsConfig:
    autoDiscovery: true
  virtualHost:
    name: test-virtual-host
    domains:
      - example.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"Hello\"}\n"
